test/deprecated/parenful/not-parenless.chpl
@deprecated(notes="the parenful version of function f() is deprecated", style="parenful")
proc f() {
    return 42;
}

var x = f();
